Remove unused files and update project structure. Deleted __init__.py files, camera_settings.json, and all_config.txt. Added new entries to .gitignore for project-specific directories. Updated main.py to improve structure and added logging in camera_controller.py for better error handling and debugging. Enhanced camera_settings.py with profile management features.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "debugpy",
             "request": "launch",
             "args": ["display=10.0"],
-            "program": "${workspaceFolder}/src/main.py",
+            "program": "${workspaceFolder}/main.py",
             "console": "integratedTerminal"
         }
     ]
