--- a/.gitignore
+++ b/.gitignore
@@ -173,4 +173,8 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
+# Project specific
+data/captures/
+data/sessions/
+
 # End of https://www.toptal.com/developers/gitignore/api/python
